# ChiralFold

./: .gitignore  AUDIT_REPORT.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  VERIFICATION_REPORT.md  benchmark_data.csv  model.py  pyproject.toml  requirements-lock.txt  run_benchmark.py  setup.py  summary.json
.github/workflows/: ci.yml
ChiralFold_3/: README.md  main.tex  main2.tex
benchmarks/: README.md  bulletproof_verification.py  childs2025_comparison.py  classify_d_errors.py  d_residue_pdb_ids.json  d_residue_survey.py  expand_ramachandran_benchmark.py  folding_quality_benchmark.py  independent_d_residue_verification.py  mirror_binder_design.py  mirror_pipeline_benchmark.py  molprobity_comparison.py  pdb50_metadata.json  pdb_50_set.py  run_full_benchmark.py  survey_and_docking_figures.py  test_v22_improvements.py  v3_comprehensive_benchmark.py
chiralfold/: __init__.py  af3_correct.py  auditor.py  cli.py  enumerate.py  fragments.py  geometry.py  interface_scorer.py  model.py  pdb_pipeline.py  ramachandran.py  rotamers.py  threading.py  validator.py
chiralfold/data/: ramachandran_grid.json  ramachandran_thresholds.json  test_sequences.py
demos/: ChiralFold_Quick_Demo.ipynb
paper/: chiralfold_paper.docx  chiralfold_paper.tex  create_docx.js  generate_paper.py  pdb_survey_note.tex  stats_analysis.py  stats_extended.json  talk_script.docx  talk_script.docx.md
paper/pdb_survey_figures/: generate_figures.py
preprint/: README_submission.md  chiralfold_preprint.tex
results/: CLASSIFICATION_README.md  DATA_README.md  DPN_DAS_DAL_EXPANSION_REPORT.md  DPR_EXPANSION_REPORT.md  EXPANDED_VERIFICATION_REPORT.md  REPRODUCIBILITY.md  TARGETED_EXPANSION_REPORT.md  batch_results.csv  benchmark_data.csv  ccd_code_coverage_summary.csv  childs2025_comparison.json  d_residue_verification.csv  d_residue_verification_summary.json  d_survey_results.json  error_classification.json  error_correlation_data.json  error_table_verified.csv  error_taxonomy.csv  error_taxonomy_expanded.csv  molprobity_comparison.json  robustness_statement.txt  summary.json
results/bulletproof_outputs/: check1_sign_convention.json  full_verification.json
results/docking/: config.json  d_p53_ligand.pdbqt  (+3 more)
tests/: conftest.py  test_af3_correction.py  test_chirality.py
(+1 files in other folders)
