[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chiralfold"
version = "3.2.1"
description = "Chirality-preserving peptide structure prediction — defeats AlphaFold 3 on D-peptides and diastereomers"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Tommaso R. Marena", email = "marena@cua.edu"},
]
keywords = ["chirality", "peptide", "D-amino-acid", "diastereomer", "structure-prediction", "alphafold"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.21,<3.0",
    "rdkit>=2023.3,<2027",
    "scipy>=1.9,<2.0",
    "pandas>=1.3,<3.0",
    "matplotlib>=3.5,<4.0",
    "seaborn>=0.11,<1.0",
    "scikit-learn>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
chiralfold = "chiralfold.cli:main"

[project.urls]
Homepage = "https://github.com/Tommaso-R-Marena/ChiralFold"
Repository = "https://github.com/Tommaso-R-Marena/ChiralFold"
Issues = "https://github.com/Tommaso-R-Marena/ChiralFold/issues"
Documentation = "https://github.com/Tommaso-R-Marena/ChiralFold/blob/master/README.md"

[tool.setuptools.packages.find]
include = ["chiralfold*"]

[tool.setuptools.package-data]
chiralfold = ["data/*.json", "data/*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: mark test as slow to run (requires network or long compute)",
]

[tool.coverage.run]
source = ["chiralfold"]
omit = ["tests/*", "benchmarks/*", "paper/*"]

[tool.ruff]
line-length = 100
target-version = "py39"
